--- a/package.json
+++ b/package.json
@@ -47,12 +47,22 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
+    "import-sort-parser-babylon": "^6.0.0",
+    "import-sort-style-module": "^6.0.0",
     "lint-staged": "^13.2.1",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "prettier-plugin-import-sort": "^0.0.7"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "lint-staged": {
-    "**/*.{js,jsx}": [
-      "npm run lint",
+    "src/*.{js,jsx,ts,tsx}": [
+      "npm run lint"
+    ],
+    "src/*.{css,json, md}": [
       "prettier --write"
     ]
   }
