--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,10 +26,16 @@
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "import/no-unresolved": "off",
     "react/react-in-jsx-scope": "error",
-    "arrow-body-style": ["error", "as-needed"],
+    "arrow-body-style": ["error", "always"],
     "linebreak-style": ["error", "windows"],
     "semi": 0,
-    "comma-dangle": 0
+    "comma-dangle": 0,
+    "react/function-component-definition": [
+      2,
+      {
+        "namedComponents": "arrow-function"
+      }
+    ]
   },
   "settings": {
     "react": {
